--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -18,7 +18,7 @@ int SDL_QueryTexture(SDL_Texture* texture,
 
 {|
 |'''texture'''
-|a texture to be queried
+|an SDL_Texture to be queried
 |-
 |'''format'''
 |a pointer filled in with the raw format of the texture; the actual format may differ, but pixel transfers will use this format; see [[#format|Remarks]] for details
