--- a/SDL_RenderCopy.mediawiki
+++ b/SDL_RenderCopy.mediawiki
@@ -15,13 +15,13 @@ int SDL_RenderCopy(SDL_Texture*    texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the source texture; see [[#Remarks|Remarks]] for details
+|the source SDL_Texture; see [[#Remarks|Remarks]] for details
 |-
 |'''srcrect'''
-|a pointer to the source rectangle, or NULL for the entire texture
+|the source [[SDL_Rect]] or NULL for the entire texture
 |-
 |'''dstrect'''
-|a pointer to the destination rectangle, or NULL for the entire rendering target
+|the destination [[SDL_Rect]] or NULL for the entire rendering target
 |}
 
 == Return Value ==
