--- a/SDL_RenderDrawRect.mediawiki
+++ b/SDL_RenderDrawRect.mediawiki
@@ -13,7 +13,7 @@ int SDL_RenderDrawRect(const SDL_Rect* rect)
 == Function Parameters ==
 {|
 |'''rect'''
-|a pointer to the destination rectangle of type [[SDL_Rect]], or NULL to outline the entire rendering target
+|the destination [[SDL_Rect]] structure, or NULL to outline the entire rendering target
 |}
 
 == Return Value ==
