update content - pointers, struct

--- a/SDL_RenderFillRect.mediawiki
+++ b/SDL_RenderFillRect.mediawiki
@@ -13,7 +13,7 @@ int SDL_RenderFillRect(const SDL_Rect* rect)
 == Function Parameters ==
 {|
 |'''rect'''
-|the [[SDL_Rect]] representing the area to fill, or NULL for the entire rendering target
+|the [[SDL_Rect]] structure representing the area to fill, or NULL for the entire rendering target
 |}
 
 == Return Value ==
