--- a/SDL_GetSurfaceColorMod.mediawiki
+++ b/SDL_GetSurfaceColorMod.mediawiki
@@ -17,16 +17,16 @@ int SDL_GetSurfaceColorMod(SDL_Surface* surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|the surface to query
+|the [[SDL_Surface]] to query
 |-
 |'''r'''
-|a pointer filled in with the source red color value
+|,,a pointer filled in with ,,the source red color value
 |-
 |'''g'''
-|a pointer filled in with the source green color value
+|,,a pointer filled in with ,,the source green color value
 |-
 |'''b'''
-|a pointer filled in with the source blue color value
+|,,a pointer filled in with ,,the source blue color value
 |}
 
 == Return Value ==
