update content - pointers, struct

--- a/SDL_LoadBMP_RW.mediawiki
+++ b/SDL_LoadBMP_RW.mediawiki
@@ -21,8 +21,10 @@ SDL_Surface* SDL_LoadBMP_RW(SDL_RWops* src,
 |non-zero to close the source after being read
 |}
 
+<<Color2(green,There is no page for SDL_RWops.  Should there be?  Should it be mentioned in the param description?)>>
+
 == Return Value ==
-Returns a pointer to a new surface of type [[SDL_Surface]] or NULL if there was an error; call [[SDL_GetError]]() for more information.
+Returns a pointer to a new [[SDL_Surface]] or NULL if there was an error; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
