--- a/SDL_BlitSurface.mediawiki
+++ b/SDL_BlitSurface.mediawiki
@@ -17,16 +17,16 @@ int SDL_BlitSurface(SDL_Surface* src,
 == Function Parameters ==
 {|
 |'''src'''
-|the ,,source,, [[SDL_Surface]] ^structure^ containing '''srcrect''' / the source rectangle
+|the [[SDL_Surface]] containing '''srcrect''' / the source rectangle
 |-
 |'''srcrect'''
 |the [[SDL_Rect]] ^structure representing / describing^ ,,containing,, the source pixels
 |-
 |'''dst'''
-|the ,,destination,, [[SDL_Surface]] ^structure^ containing '''dstrect''' / the destination rectangle
+|the [[SDL_Surface]] containing '''dstrect''' / the destination rectangle
 |-
 |'''dstrect'''
-|the destination [[SDL_Rect]] ^structure^ to be filled ^with / by the blit^
+|the [[SDL_Rect]] ^structure^ to be filled ^with / by the blit^
 |}
 
 == Return Value ==
