--- a/SDL_SetSurfacePalette.mediawiki
+++ b/SDL_SetSurfacePalette.mediawiki
@@ -15,10 +15,10 @@ int SDL_SetSurfacePalette(SDL_Surface* surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|a pointer to the surface of type [[SDL_Surface]] ^to update^
+|the [[SDL_Surface]] ^to update^
 |-
 |'''palette'''
-|a pointer to the palette of type [[SDL_Palette]] ^to apply^
+|the [[SDL_Palette]] ^to apply^
 |}
 
 == Return Value ==
