update content - pointers, struct

--- a/SDL_SetSurfaceRLE.mediawiki
+++ b/SDL_SetSurfaceRLE.mediawiki
@@ -15,7 +15,7 @@ int SDL_SetSurfaceRLE(SDL_Surface* surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|a pointer to the [[SDL_Surface]] to set
+|the [[SDL_Surface]] to set
 |-
 |'''flag'''
 |0 to ^disable?^, non-zero to ^enable?^ RLE acceleration
@@ -31,8 +31,6 @@ You can add your code example here
 
 == Remarks ==
 If RLE is enabled, colorkey and alpha blending blits are much faster, but the surface must be locked before directly accessing the pixels. 
-
-<<Color2(purple,This function returns -1 if the surface is not valid.)>>
 
 == Related Functions ==
 :[[SDL_LockSurface]]
