--- a/SDL_SoftStretch.mediawiki
+++ b/SDL_SoftStretch.mediawiki
@@ -17,22 +17,20 @@ int SDL_SoftStretch(SDL_Surface*    src,
 == Function Parameters ==
 {|
 |'''src'''
-|a pointer to the [[SDL_Surface]] containing '''srcrect'''
+|the [[SDL_Surface]] containing '''srcrect''' / the source rectangle
 |-
 |'''srcrect'''
-|the [[SDL_Rect]] to be stretched
+|the [[SDL_Rect]] structure representing the source rectangle
 |-
 |'''dst'''
-|a pointer to the [[SDL_Surface]] containing '''dstrect'''
+|the [[SDL_Surface]] containing '''dstrect''' / the destination rectangle
 |-
 |'''dstrect'''
-|the [[SDL_Rect]] containing the output parameters
+|the [[SDL_Rect]] structure representing the rectangle to be filled with / by the blit
 |}
 
-<<Color2(green,How is dstrect the destination and also a const?  Does it just provide the parameters for the output but not hold the output?)>>
-
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
