--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -22,11 +22,11 @@ A structure that contains joystick axis motion event ,,structure,, ^information^
 |-
 |Uint8
 |'''padding1'''
-|
+|^8 empty bits to total 32^???
 |-
 |Uint8
 |'''padding2'''
-|
+|^8 empty bits to total 32^???
 |-
 |int
 |'''value'''
