--- a/SDL_JoyButtonEvent.mediawiki
+++ b/SDL_JoyButtonEvent.mediawiki
@@ -26,7 +26,7 @@ A structure that contains joystick button event ,,structure,, ^information^ (eve
 |-
 |Uint8
 |'''padding1'''
-|
+|^8 empty bits to total 32^???
 |}
 
 == Code Examples ==
