--- a/SDL_MouseButtonEvent.mediawiki
+++ b/SDL_MouseButtonEvent.mediawiki
@@ -26,11 +26,11 @@ A structure that contains mouse button event ,,structure,, ^information^ ,,(even
 |-
 |Uint8
 |'''padding1'''
-|
+|^8 empty bits to total 32^???
 |-
 |Uint8
 |'''padding2'''
-|
+|^8 empty bits to total 32^???
 |-
 |int
 |'''x'''
