--- a/SDL_WindowEvent.mediawiki
+++ b/SDL_WindowEvent.mediawiki
@@ -22,15 +22,15 @@ A structure that contains window state change event data (event.window.*).
 |-
 |Uint8
 |'''padding1'''
-|
+|^8 empty bits to total 32^???
 |-
 |Uint8
 |'''padding2'''
-|
+|^8 empty bits to total 32^???
 |-
 |Uint8
 |'''padding3'''
-|
+|^8 empty bits to total 32^???
 |-
 |int
 |'''data1'''
