--- a/SDL_PollEvent.mediawiki
+++ b/SDL_PollEvent.mediawiki
@@ -14,11 +14,11 @@ int SDL_PollEvent(SDL_Event* event)
 == Function Parameters ==
 {|
 |'''event'''
-|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^a pointer to the location / [[SDL_Event]] to store the next event from the queue, or NULL^
+|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^the [[SDL_Event]] structure to be filled with the next event from the queue, or NULL^
 |}
 
 == Return Value ==
-Returns 1 if there are any pending events or 0 if there are none available; call [[SDL_GetError]]() for more information.  
+Returns 1 if there are ,,any,, pending events or 0 if there are none available; call [[SDL_GetError]]() for more information.  
 
 <<Color2(green,Can this function produce an error or only 0?  Would you still call the error function?)>>
 
