--- a/SDL_WaitEvent.mediawiki
+++ b/SDL_WaitEvent.mediawiki
@@ -14,11 +14,11 @@ int SDL_WaitEvent(SDL_Event* event)
 == Function Parameters ==
 {|
 |'''event'''
-|if not NULL, the next event is removed from the queue and stored in that area ''-or-'' ^a pointer to the location / [[SDL_Event]] to store the next event from the queue, or NULL^
+|if not NULL, the next event is removed from the queue and stored in that area ''-or-'' ^the [[SDL_Event]] structure to be filled with the next event from the queue, or NULL^
 |}
 
 == Return Value ==
-Returns 1 on success, or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
+Returns 1 on success or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
