--- a/SDL_WaitEventTimeout.mediawiki
+++ b/SDL_WaitEventTimeout.mediawiki
@@ -15,14 +15,14 @@ int SDL_WaitEventTimeout(SDL_Event* event,
 == Function Parameters ==
 {|
 |'''event'''
-|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^a pointer to the location / [[SDL_Event]] to store the next event from the queue, or NULL^
+|,,if not NULL, the next event is removed from the queue and stored in that area,, ''-or-'' ^the [[SDL_Event]] structure to be filled with the next event from the queue, or NULL^
 |-
 |'''timeout'''
 |^the number of milliseconds to wait for the next available event^
 |}
 
 == Return Value ==
-Returns 1 on success, or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
+Returns 1 on success or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
