--- a/SDL_GetScancodeName.mediawiki
+++ b/SDL_GetScancodeName.mediawiki
@@ -18,7 +18,7 @@ const char* SDL_GetScancodeName(SDL_scancode scancode)
 |}
 
 == Return Value ==
-A pointer to a UTF-8 string that stays valid at least until the next call to this function. If you need it around any longer, you must copy it. If the scancode doesn't have a name, this function returns an empty string ("").  <<Color2(green,Should scancode here be bold?)>>
+Returns a pointer to a UTF-8 string that stays valid at least until the next call to this function. If you need it around any longer, you must copy it. If the scancode doesn't have a name, this function returns an empty string ("").  <<Color2(green,Should scancode here be bold?  Should the pointer be mentioned?)>>
 
 == Code Examples ==
 ```c++
