--- a/SDL_SetTextInputRect.mediawiki
+++ b/SDL_SetTextInputRect.mediawiki
@@ -14,7 +14,7 @@ void SDL_SetTextInputRect(SDL_Rect* rect)
 == Function Parameters ==
 {|
 |'''rect'''
-|the [[SDL_Rect]] to receive text^, or NULL for the entire render target^
+|the [[SDL_Rect]] structure representing the rectangle to receive text^, or NULL for the entire render target^???
 |}
 
 == Code Examples ==
