--- a/SDL_WarpMouseInWindow.mediawiki
+++ b/SDL_WarpMouseInWindow.mediawiki
@@ -16,7 +16,7 @@ void SDL_WarpMouseInWindow(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the window to move the mouse into, or NULL for the current mouse focus
+|the SDL_Window to move the mouse into, or NULL for the current mouse focus
 |-
 |'''x'''
 |the x coordinate within the window
