--- a/SDL_JoystickGetAxis.mediawiki
+++ b/SDL_JoystickGetAxis.mediawiki
@@ -15,10 +15,10 @@ Sint16 SDL_JoystickGetAxis(SDL_Joystick* joystick,
 == Function Parameters ==
 {|
 |'''joystick'''
-|a pointer to a structure containing joystick information ???
+|an SDL_Joystick structure containing joystick information ???
 |-
 |'''axis'''
-|^the axis to query; the axis indices start at index 0; see [[#Remarks|Remarks]] for details
+|^the axis to query^; the axis indices start at index 0; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
